# manga-yon-tauri

./: package.json  reader.html  tsconfig.json  vite.config.ts
src/: App.vue  main.ts  reader-main.ts  reader.vue
src-tauri/: .env  Cargo.toml  tauri.conf.json
src-tauri/migrations/: 20230702145504_manga_info.sql
src-tauri/src/: cmd.rs  common.rs  dao.rs  main.rs  reader.rs  services.rs
src-tauri/src/dao/: entity.rs  init.rs
src-tauri/src/reader/: reader_cmd.rs  reader_dao.rs  reader_services.rs
src-tauri/src/services/: file_filter.rs
src/components/: menu-btn.vue  setting-menu.vue
src/config/: components.ts  index.ts  reader-components.ts  store.ts
src/interface/: Api.ts  index.ts
src/store/: rxdb.ts
src/util/: request.ts  sendMsg.ts  sort-array-by-worker.ts
src/views/: Home.vue  comic-shelf.vue
src/views/reader/: reader-container.vue  reader.ts
